intentando arreglar el form

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
             <legend class="legend">Datos personales</legend>
             <div>
                 <label for="nombre">nombre</label>
-                <input type="text" name="nombre" id="nombre" required>
+                <input type="text" name="nombre" id="nombre" required placeholder="nombre">
             </div>
                 <div>
                     <label for="apellidos">apellidos</label>
-                    <input type="text" name="apellidos" id="apellidos" required>
+                    <input type="text" name="apellidos" id="apellidos" required placeholder="apellidos">
                 </div>
                 <div>
                     <label for="direccion">  Direccion Postal</label>
@@ -58,12 +58,13 @@
                     <input type="text" name="ciudad"  required placeholder="ciudad">
                 <div>
                     <label for="Nick">Nick</label>
-                    <input type="text" name="Nick" id="Nick" required>
+                    <input type="text" name="Nick" id="Nick" required placeholder="Nick">
                 </div>
             <div>
                 <label for="correoElectronico"> Correo electronico</label>
-                <input type="email" name="correoElectronico" id="correoElectronico" required>
+                <input type="email" name="correoElectronico" id="correoElectronico" required placeholder="correoElectronico">
             </div>
+        </fieldset>
         <fieldset>
             <legend>Sexio usuario</legend>
             <label for="hombre">Hombre</label>
