cambiando ruta imagenes

--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
             <td class="a1" colspan="3" ><div>Street Fighters</div></td>
         </tr>
         <tr>
-            <td><img src="/assets/img/ken.png" class="imgs"><p class="txtceldas">Ken</p></td>
-            <td><img src="/assets/img/ChunLi.png" class="imgs"><p class="txtceldas">Chung Li</p></td>
-            <td><img src="/assets/img/Zangief.png" class="imgs"><p class="txtceldas">Zangief</p></td>
-            <td><img src="/assets/img/Dhalsim.png" class="imgs"><p class="txtceldas">Dilanlsin</p></td>
+            <td><img src="assets/img/ken.png" class="imgs"><p class="txtceldas">Ken</p></td>
+            <td><img src="assets/img/ChunLi.png" class="imgs"><p class="txtceldas">Chung Li</p></td>
+            <td><img src="assets/img/Zangief.png" class="imgs"><p class="txtceldas">Zangief</p></td>
+            <td><img src="assets/img/Dhalsim.png" class="imgs"><p class="txtceldas">Dilanlsin</p></td>
         </tr>
         <tr>
-            <td><img src="/assets/img/Ryu.png" class="imgs"><p class="txtceldas">Ryu</p></td>
-            <td><img src="/assets/img/EHonda.png" class="imgs"><p class="txtceldas">E Honda</p></td>
-            <td><img src="/assets/img/Blanka.png" class="imgs"><p class="txtceldas">Blanka</p></td>
-            <td><img src="/assets/img/Guille.png" class="imgs"><p class="txtceldas">Guille</p></td>
+            <td><img src="assets/img/Ryu.png" class="imgs"><p class="txtceldas">Ryu</p></td>
+            <td><img src="assets/img/EHonda.png" class="imgs"><p class="txtceldas">E Honda</p></td>
+            <td><img src="assets/img/Blanka.png" class="imgs"><p class="txtceldas">Blanka</p></td>
+            <td><img src="assets/img/Guille.png" class="imgs"><p class="txtceldas">Guille</p></td>
         </tr>
         <tr>
-            <td><img src="/assets/img/THawk.png" class="imgs"><p class="txtceldas">T Hank</p></td>
-            <td><img src="/assets/img/Feilong.png" class="imgs"><p class="txtceldas">Fellong</p></td>
-            <td><img src="/assets/img/DeeJay.png" class="imgs"><p class="txtceldas">Dee Jan</p></td>
-            <td><img src="/assets/img/Cammy.png" class="imgs"><p class="txtceldas">Cammy</p></td>
+            <td><img src="assets/img/THawk.png" class="imgs"><p class="txtceldas">T Hank</p></td>
+            <td><img src="assets/img/Feilong.png" class="imgs"><p class="txtceldas">Fellong</p></td>
+            <td><img src="assets/img/DeeJay.png" class="imgs"><p class="txtceldas">Dee Jan</p></td>
+            <td><img src="assets/img/Cammy.png" class="imgs"><p class="txtceldas">Cammy</p></td>
         </tr>
         <tr>
-            <td><img src="/assets/img/Balrog.png" class="imgs"><p class="txtceldas">Balrog</p></td>
-            <td><img src="/assets/img/Vega.png" class="imgs"><p class="txtceldas">Vega</p></td>
-            <td><img src="/assets/img/Sagat.png" class="imgs"><p class="txtceldas">Sagut</p></td>
-            <td><img src="/assets/img/MBison.png" class="imgs"><p class="txtceldas">M bison</p></td>
+            <td><img src="assets/img/Balrog.png" class="imgs"><p class="txtceldas">Balrog</p></td>
+            <td><img src="assets/img/Vega.png" class="imgs"><p class="txtceldas">Vega</p></td>
+            <td><img src="assets/img/Sagat.png" class="imgs"><p class="txtceldas">Sagut</p></td>
+            <td><img src="assets/img/MBison.png" class="imgs"><p class="txtceldas">M bison</p></td>
         </tr>
     </table>
     <h2 class="titulo2">Formulario de Inscripción para jugar a Street Figther</h2>
